--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "connect-history-api-fallback": "^1.5.0",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "formidable": "^1.1.1",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.3"
+    "mongoose": "^4.13.3",
+    "node-fetch": "^1.7.3",
+    "time-formater": "^1.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
